# yamm-substitute

./: .env.example  .gitignore  DESKTOP_PLAN.md  PLAN.md  README.md  app.py  campaign_sender.py  config.py  csv_importer.py  database.py  gmail_service.py  index.html  landing.css  landing.js  licensing.py  models.py  requirements.txt  tracking.py
cloudflare-worker/: wrangler.toml
cloudflare-worker/src/: index.js
desktop/: package-lock.json  package.json  release.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html
landing/: index.html  landing.js
relay-worker/: schema.sql  wrangler.toml
relay-worker/src/: index.js
static/: style.css
templates/: base.html  dashboard.html  settings.html  tags.html
templates/billing/: opening.html  return.html
templates/campaigns/: create.html  detail.html  list.html  review.html
templates/contacts/: detail.html  import.html  import_progress.html  list.html
templates/email_templates/: editor.html  list.html
