[package]
name = "creatorcrm"
version = "0.1.3"
description = "CreatorCRM — own your outreach"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde_json = "1"

[profile.release]
strip = true
lto = true
